plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.demo'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.cloud:spring-cloud-config-client:4.1.2'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    //implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.ehcache:ehcache'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.passay:passay:1.6.4'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    jvmArgs = ['-server',
               '-Xms250m',
               '-Xmx500m',
               '-XX:+UseZGC',
               '-XX:+ZGenerational',
               '-XX:+HeapDumpOnOutOfMemoryError',
               '-XX:MaxGCPauseMillis=200',
               '-XX:ParallelGCThreads=20',
               '-XX:ConcGCThreads=5',
               '-XX:InitiatingHeapOccupancyPercent=70',
               '-DPOSTGRES_DB=test-db',
               '-DPOSTGRES_HOST=localhost',
               '-DPOSTGRES_PASSWORD=test@123',
               '-DPOSTGRES_USER=test',
               '-DHOSTNAME=pod0']
}
